# GameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Tests/: AppInitTest.cpp  CMakeLists.txt  GLTest.cpp  GLTriangle.cpp  LogTest.cpp  RawCube.cpp  RawTexture.cpp  RawTexturedCube.cpp  RawTriangle.cpp
Tests/FlappyBird/: Level.hpp  Player.hpp  Score.hpp  main.cpp
Tests/FlappyBird/plugins/: Sprite.hpp  SpriteAnimator.hpp  SpriteRenderer.hpp  Transform.hpp  ValueAnimator.hpp
Tests/assets/shaders/: sprite.frag  sprite.vert
include/GameEngine/Core/: App.hpp  Core.hpp  Events.hpp  Input.hpp  Log.hpp  MathTypes.hpp  Time.hpp  Window.hpp
include/GameEngine/Graphics/: Buffer.hpp  BufferSpec.hpp  GraphicsContext.hpp  Renderer.hpp  Shader.hpp  Texture.hpp
include/GameEngine/Util/: Array.hpp  Util.hpp
src/core/: App.cpp  EventHandler.cpp  EventHandler.hpp  GELog.hpp  GlobalStore.cpp  Input.cpp  InternalEvents.hpp  InternalInput.hpp  Log.cpp  Time.cpp  Window.cpp
src/core/platform/: Events_win32.hpp  Events_x11.hpp  Win32HNDL.hpp  Window_win32.hpp  Window_x11.hpp  X11HNDL.hpp
src/graphics/: Buffer.cpp  BufferSpec.cpp  GraphicsContext.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
src/graphics/platform/: GLBuffer.hpp  GLBufferSpec.hpp  GLGraphicsContext.hpp  GLRenderer.hpp  GLShader.hpp  GLTexture2D.hpp
